[project]
name = "hopeit.engine.workspace"
version = "0.26.rc0"

dynamic = ["readme"]

requires-python = ">=3.10"

description = "Hopeit Engine: Microservices with Streams"
license = { text = "Apache 2" }
authors = [
    { name = "Leo Smerling", email = "contact@hopeit.com.ar" },
    { name = "Pablo Canto", email = "contact@hopeit.com.ar" },
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]
dependencies = [
    "hopeit.engine",
    "hopeit.fs-storage",
]

[project.urls]
"Homepage" = "https://github.com/hopeit-git/hopeit.engine"
"CI: GitHub Actions" = "https://github.com/hopeit-git/hopeit.engine/actions?query=workflow"
"Docs: RTD" = "https://hopeitengine.readthedocs.io/en/latest/"
"GitHub: issues" = "https://github.com/hopeit-git/hopeit.engine/issues"
"GitHub: repo" = "https://github.com/hopeit-git/hopeit.engine"

[tool.uv]
package = false
dev-dependencies = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-aiohttp>=1.0.5",
    "pytest-asyncio>=0.25.3",
    "pytest-order>=1.3.0",
    "pytest-mock>=3.14.0",
    "coverage>=7.6.12",
    "ruff>=0.9.7",
    "pandas-stubs>=2.2.3",
    "isort>=5.13.2",
    "aiofiles>=24.1.0",
    "nest-asyncio>=1.6.0",
    # Type stubs
    "types-aiofiles>=24.1.0",
    "types-redis>=4.6.0",
    # Plugin test dependencies
    "uvloop>=0.21.0",
    # data/dataframes plugin tests
    "pandas-stubs>=2.2.3",
    "pyarrow>=19.0.1",
    # examples/dataframes-example deps
    "scikit-learn>=1.6.1",
]


[tool.uv.sources]
hopeit-engine = { path="engine" } # workspace = true }
hopeit-fs-storage = { path="plugins/storage/fs" } # workspace = true }


[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = [
    "engine"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint.extend-per-file-ignores]
"engine/test/**/test_*.py" = ["F401", "F811"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/plain" }
