[project]
name = "hopeit.engine.workspace"
version = "0.28.1"

dynamic = ["readme"]

requires-python = ">=3.10"

description = "Hopeit Engine: Microservices with Streams"
license = "Apache-2.0"
authors = [
    { name = "Leo Smerling & Pablo Canto", email = "contact@hopeit.com.ar" },
    { name = "Leo Smerling", email = "contact@hopeit.com.ar" },
    { name = "Pablo Canto", email = "contact@hopeit.com.ar" },
]
classifiers = [    
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]
dependencies = [
    "hopeit.engine",
    "hopeit.basic-auth",
    "hopeit.apps-client",
    "hopeit.dataframes[polars]",
    "hopeit.apps-visualizer",
    "hopeit.config-manager",
    "hopeit.log-streamer",
    "hopeit.fs-storage",
    "hopeit.redis-storage",
    "hopeit.redis-streams",
    "simple-example",
    "client-example",
    "dataframes-example",
]

[tool.uv.sources]
hopeit-engine = { path="engine" }
hopeit-basic-auth = { path="plugins/auth/basic-auth" }
hopeit-apps-client = { path="plugins/clients/apps-client" }
hopeit-dataframes = { path="plugins/data/dataframes" }
hopeit-apps-visualizer = { path="plugins/ops/apps-visualizer" }
hopeit-config-manager = { path="plugins/ops/config-manager" }
hopeit-log-streamer = { path="plugins/ops/log-streamer" }
hopeit-fs-storage = { path="plugins/storage/fs" }
hopeit-redis-storage = { path="plugins/storage/redis" }
hopeit-redis-streams = { path="plugins/streams/redis" }
simple-example = { path="apps/examples/simple-example" }
client-example = { path="apps/examples/client-example" }
dataframes-example = { path="apps/examples/dataframes-example" }

[project.urls]
"Homepage" = "https://github.com/hopeit-git/hopeit.engine"
"CI: GitHub Actions" = "https://github.com/hopeit-git/hopeit.engine/actions?query=workflow"
"Docs: RTD" = "https://hopeitengine.readthedocs.io/en/latest/"
"GitHub: issues" = "https://github.com/hopeit-git/hopeit.engine/issues"
"GitHub: repo" = "https://github.com/hopeit-git/hopeit.engine"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-aiohttp>=1.0.5",
    "pytest-asyncio>=0.25.3,<1.1",  # Used by pytest-aiohttp
    "pytest-order>=1.3.0",
    "pytest-mock>=3.14.0",
    "coverage>=7.6.12",
    "ruff>=0.9.7",
    "isort>=5.13.2",
    "aiofiles>=24.1.0",
    "nest-asyncio>=1.6.0",
    # type stubs
    "types-aiofiles>=24.1.0",
    "types-redis>=4.6.0",
    "types-gunicorn>=23.0.0",
    # examples/dataframes-example runtime deps
    "numpy>=2",
    "scikit-learn>=1.6.1",
]

[tool.pyright]
include = [
    "engine",
    "plugins/auth/basic-auth",
    "plugins/clients/apps-client",
    "plugins/data/dataframes",
    "plugins/ops/apps-visualizer",
    "plugins/ops/config-manager",
    "plugins/ops/log-streamer",
    "plugins/storage/fs",
    "plugins/storage/redis",
    "plugins/streams/redis",
    "apps/examples/simple-example",
    "apps/examples/client-example",
    "apps/examples/dataframes-example",
]
exclude = [
    "engine/build",
    "plugins/auth/basic-auth/build",
    "plugins/clients/apps-client/build",
    "plugins/data/dataframes/build",
    "plugins/ops/apps-visualizer/build",
    "plugins/ops/config-manager/build",
    "plugins/ops/log-streamer/build",
    "plugins/storage/fs/build",
    "plugins/storage/redis/build",
    "plugins/streams/redis/build",
    "apps/examples/simple-example/build",
    "apps/examples/client-example/build",
    "apps/examples/dataframes-example/build",
    "**/*.egg-info",
    "**/__pycache__",
    "**/.mypy_cache",
    "**/.pytest_cache",
    "**/.ruff_cache"
]
reportArgumentType = false
reportFunctionMemberAccess = false
reportGeneralTypeIssues = "warning"
reportCallIssue = "warning"

[tool.ruff]
line-length = 100

[tool.ruff.lint.extend-per-file-ignores]
"engine/test/**/test_*.py" = ["F401", "F811"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }
