[project]
name = "hopeit.engine"
description = "Hopeit Engine: Microservices with Streams"

dynamic = ["version", "readme"]

dependencies = [
    "pydantic>=2.10.6,<3",
    "stringcase>=1.2.0",
    "lz4>=4.4.3",
    "PyJWT[crypto]>=2.10.1",
    "deepdiff>=8.2.0",
    "multidict>=6.1.0",
    "aiohttp>=3.11.12,<4",
    "aiohttp-cors>=0.7.0",
    "aiohttp-swagger3>=0.10.0",
    "gunicorn>=23.0.0",
    "click>=8.1.8",
]

[project.optional-dependencies]
# redis-streams = ["hopeit.redis-streams=={ENGINE_VERSION}"]
# redis-storage = ["hopeit.redis-storage=={ENGINE_VERSION}"]
fs-storage = ["hopeit.fs-storage==0.26.0rc0"]
# config-manager = ["hopeit.config-manager=={ENGINE_VERSION}"]
# log-streamer = ["hopeit.log-streamer=={ENGINE_VERSION}"]
# apps-visualizer = ["hopeit.apps-visualizer=={ENGINE_VERSION}"]
# apps-client = ["hopeit.apps-client=={ENGINE_VERSION}"]
# dataframes = ["hopeit.dataframes=={ENGINE_VERSION}"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"hopeit.app" = ["py.typed"]
"hopeit.cli" = ["py.typed"]
"hopeit.dataobjects" = ["py.typed"]
"hopeit.server" = ["py.typed"]
"hopeit.streams" = ["py.typed"]
"hopeit.testing" = ["py.typed"]
"hopeit.toolkit" = ["py.typed"]

[project.scripts]
hopeit_server = "hopeit.cli.server:server"
hopeit_openapi = "hopeit.cli.openapi:openapi"

[tool.setuptools.dynamic]
version = { attr = "hopeit.server.version.ENGINE_VERSION" }
readme = { file = ["README.md"], content-type = "text/markdown" }
