[project]
name = "hopeit.engine"
description = "Hopeit Engine: Microservices with Streams"

dynamic = ["version", "readme"]

dependencies = [
    "pydantic>=2.10.6,<3",
    "stringcase>=1.2.0",
    "lz4>=4.4.3",
    "PyJWT[crypto]>=2.10.1",
    "deepdiff>=8.2.0",
    "multidict>=6.1.0",
    "aiohttp>=3.11.12,<4",
    "aiohttp-cors>=0.7.0",
    "aiohttp-swagger3>=0.10.0",
    "gunicorn>=23.0.0",
    "click>=8.1.8",
]

license = { text = "Apache 2" }
authors = [
    { name = "Leo Smerling & Pablo Canto", email = "contact@hopeit.com.ar" },
    { name = "Leo Smerling", email = "contact@hopeit.com.ar" },
    { name = "Pablo Canto", email = "contact@hopeit.com.ar" },
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]

[project.urls]
"Homepage" = "https://github.com/hopeit-git/hopeit.engine"
"CI: GitHub Actions" = "https://github.com/hopeit-git/hopeit.engine/actions?query=workflow"
"Docs: RTD" = "https://hopeitengine.readthedocs.io/en/latest/"
"GitHub: issues" = "https://github.com/hopeit-git/hopeit.engine/issues"
"GitHub: repo" = "https://github.com/hopeit-git/hopeit.engine"

[tool.setuptools]
include-package-data = true

[project.optional-dependencies]
web = []
cli = []
redis-streams = ["hopeit.redis-streams==0.26.0rc0"]
redis-storage = ["hopeit.redis-storage==0.26.0rc0"]
fs-storage = ["hopeit.fs-storage==0.26.0rc0"]
config-manager = ["hopeit.config-manager==0.26.0rc0"]
log-streamer = ["hopeit.log-streamer==0.26.0rc0"]
apps-visualizer = ["hopeit.apps-visualizer==0.26.0rc0"]
apps-client = ["hopeit.apps-client==0.26.0rc0"]
dataframes = ["hopeit.dataframes==0.26.0rc0"]

[project.scripts]
hopeit_server = "hopeit.cli.server:server"
hopeit_openapi = "hopeit.cli.openapi:openapi"

[tool.setuptools.dynamic]
version = { attr = "hopeit.server.version.ENGINE_VERSION" }
readme = { file = ["README.md"], content-type = "text/markdown" }
