[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "client_example"
description = "hopeit.engine Client Example App"
dynamic = ["version"]
license = { text = "Apache 2" }
authors = [
    { name = "Leo Smerling", email = "contact@hopeit.com.ar" },
    { name = "Pablo Canto", email = "contact@hopeit.com.ar" },
]
requires-python = ">=3.9"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
