[project]
name = "client_example"
version = "0.26.0rc0"

description = "hopeit.engine Client Example App"
dynamic = ["readme"]

dependencies = [
    "hopeit.engine>=0.26.0rc0",
    "simple-example>=0.26.0rc0",
    "hopeit.basic-auth>=0.26.0rc0",
    "hopeit.apps-client>=0.26.0rc0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hopeit.basic_auth" = ["py.typed"]

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }
