[project]
name = "hopeit.apps-client"
version = "0.26.0rc0"

description = "Hopeit Apps Client Plugin"
dynamic = ["readme"]

dependencies = [
    "hopeit.engine>=0.26.0rc0",
]

license = { text = "Apache 2" }
authors = [
    { name = "Leo Smerling & Pablo Canto", email = "contact@hopeit.com.ar" },
    { name = "Leo Smerling", email = "contact@hopeit.com.ar" },
    { name = "Pablo Canto", email = "contact@hopeit.com.ar" },
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]

[project.urls]
"Homepage" = "https://github.com/hopeit-git/hopeit.engine"
"CI: GitHub Actions" = "https://github.com/hopeit-git/hopeit.engine/actions?query=workflow"
"Docs: RTD" = "https://hopeitengine.readthedocs.io/en/latest/"
"GitHub: issues" = "https://github.com/hopeit-git/hopeit.engine/issues"
"GitHub: repo" = "https://github.com/hopeit-git/hopeit.engine"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }
