[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hopeit.dataframes"
version = "0.26.0rc0"

description = "Hopeit Engine Dataframes for Pandas"
dynamic = ["readme"]

dependencies = [
    "hopeit.engine>=0.26.0rc0",
    "hopeit.fs-storage>=0.26.0rc0",
    "pandas>=2.2.3",
    "numpy>=1.26.4"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hopeit.basic_auth" = ["py.typed"]

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }
