[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hopeit.config-manager"
version = "0.26.0rc0"

description = "Hopeit Engine Config Manager Plugin"
dynamic = ["readme"]

dependencies = [
    "hopeit.engine>=0.26.0rc0", 
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hopeit.basic_auth" = ["py.typed"]

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/plain" }
