[project]
name = "hopeit.log-streamer"
version = "0.26.0rc0"

description = "Hopeit Engine Log Streamer Plugin"
dynamic = ["readme"]

dependencies = [
    "hopeit.engine>=0.26.0rc0",
    "watchdog>=6.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hopeit.basic_auth" = ["py.typed"]

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }
