[project]
name = "hopeit.fs-storage"
version = "0.26.0rc0"

description = "Hopeit Engine File System Storage Toolkit"
dynamic = ["readme"]

dependencies = [
    "hopeit.engine>=0.26.0rc0", 
    "aiofiles>=24.1.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hopeit.fs_storage" = ["py.typed"]
"hopeit.fs_storage.events" = ["py.typed"]

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }
