[project]
name = "hopeit.redis-streams"
version = "0.26.0rc0"

description = "Hopeit Engine Redis Streams Plugin"
dynamic = ["readme"]

dependencies = [
    "hopeit.engine>=0.26.0rc0",
    "redis>=5.2.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hopeit.fs_storage" = ["py.typed"]
"hopeit.fs_storage.events" = ["py.typed"]

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }
